--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ permalink:           pretty
 # About/contact
 author:
   name:              Eric Shagrin
-  url:               n/a
+  url:               " "
   email:             ericshagrin@uchicago.edu
 
 # Gems
